# retro-plugins

./: .gitmodules  Makefile.am  NEWS  configure.ac  retro-plugins.doap
plugins/: Makefile.am  distdir.py  submodule-plugin.mk.in
plugins/atari-2600/: Makefile.in  configure.ac
plugins/atari-7800/: Makefile.in  configure.ac
plugins/game-boy/: Makefile.in  configure.ac
plugins/game-boy-advance/: Makefile.in  configure.ac
plugins/mame/: Makefile.in  configure.ac
plugins/neo-geo-pocket/: Makefile.in  configure.ac
plugins/nes/: Makefile.in  configure.ac
plugins/pc-engine/: Makefile.in  configure.ac
plugins/playstation/: Makefile.in  configure.ac
plugins/psx/: Makefile.in  configure.ac
plugins/snes/: Makefile.in  configure.ac
