SUBDIRS =

if ENABLE_ATARI_2600_PLUGIN
SUBDIRS += atari-2600
endif

if ENABLE_ATARI_7800_PLUGIN
SUBDIRS += atari-7800
endif

if ENABLE_GAME_BOY_PLUGIN
SUBDIRS += game-boy
endif

if ENABLE_MAME_PLUGIN
SUBDIRS += mame
endif

if ENABLE_NEO_GEO_POCKET_PLUGIN
SUBDIRS += neo-geo-pocket
endif

if ENABLE_NES_PLUGIN
SUBDIRS += nes
endif

if ENABLE_PC_ENGINE_PLUGIN
SUBDIRS += pc-engine
endif

if ENABLE_SNES_PLUGIN
SUBDIRS += snes
endif

-include $(top_srcdir)/git.mk
